# VibeIndex

./: .env  .gitignore  .idea  .pre-commit-config.yaml  .todo  AGENTS.md  Change.md  GEMINI.md  QWEN.md  app.py  ax_main.py  cli.py  code_parser.py  code_splitting_implementation.md  count_tokens.py  countokens.py  debug_deps.py  debug_deps2.py  debug_deps3.py  debug_deps4.py  debug_deps5.py  debug_deps6.py  debug_meta.py  deletion.py  docker-compose.yml  env.example  game.html  graph-plan.md  idea_migration.md  index.html  index.json  main.py  main_sec.py  map.txt  map_chunk_processor.txt  map_context.txt  pDiagram.md  pyproject.toml  rag2.mermaid  rag_cli.py  (+6 more)
config/: settings.py
data/: parsed_chunks_tipsy_2_embedded.json
docs/: Rag.mermaid  architecture.mermaid  architecture_calude_gav_rag.md  architecture_claude_gav_rag.md  architecture_gav_rag.md  claudearchitecture.mermaid  data_store_usage.md  expansion_steps.md  full_rag_system_implementation_guide.md  gemini_3.md  graph-plan.md  preprocessing_module.md  progress.md  progress_cline.md  progress_qwen.md  qwen_steps.md  rag2.mermaid  rag_graph_agent_pipeline.md
old_code/: chunk_processor.py  gen_context.py  generate_context.py
scripts/: ingest.py
src/: __init__.py  app.py  cli.py
src/config/: __init__.py  data_store.py  embedding_config.py  llm_config.py  neo4j_config.py  qdrant_config.py  settings.py
src/embedding/: __init__.py  batch_processor.py  embedder.py  quality_validator.py  resumable.py
src/generation/: __init__.py  batch_processor.py  context_builder.py  generator.py  prompt_constructor.py
src/preprocessing/: README.md  __init__.py  analyzer.py  chunk.py  dependency_mapper.py  language_config.py  metadata_extractor.py  parser.py  preprocessor.py
src/reranking/: __init__.py  cross_encoder.py  final_ranking.py  input_processor.py  main.py  quality_assurance.py  scoring.py  semantic_similarity.py
src/retrieval/: __init__.py  complete_retrieval_system.py  hybrid_search.py  initial_candidate_selection.py  main.py  rag_system.py  search.py
src/utils/: db_migration.py
tests/: test_analyzer.py  test_analyzer_fixed.py  test_chunk.py  test_chunk_preprocessor.py  test_config.py  test_dependency_mapper.py  test_language_config.py  test_metadata_extractor.py  test_parser.py  test_preprocessing_init.py
