[project]
name = "geminindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
