[project]
name = "geminindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "pydantic>=2.12.4",
    "pydantic-settings",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-html>=0.20.0",
    "tree-sitter-css>=0.20.0",
    "libcst>=1.0.0",
    "pytest-cov>=7.0.0",
    "coverage>=7.12.0",
]
